--- a/iauModule/build.gradle
+++ b/iauModule/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
 //    implementation 'com.google.android.play:app-update:2.1.0'
     implementation 'com.google.android.material:material:1.10.0'
-    api 'com.google.android.play:core:1.10.3'
+//    api 'com.google.android.play:core:1.10.3'
     api 'com.google.android.ump:user-messaging-platform:2.1.0'
 }
 afterEvaluate {
